--- a/data/kaist-rgbt.yaml
+++ b/data/kaist-rgbt.yaml
@@ -11,8 +11,10 @@
 path: datasets/kaist-rgbt
 train: # train files info (relative to 'path') 12,538 images
   - train_split.txt      # TODO: Please separate this file into train/val
+#  - train-all-04.txt 
 val: # val files info (relative to 'path')  12,538 images
   - val_split.txt
+#  - test-all-20.txt
 test: # test files info (optional)
   - test-all-20.txt
 
